Login and registration, has to be fixed
